Команды от устройства к модулям
